--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_svg: ^2.0.5
   flutter_screenutil: ^5.7.0
   flutter_bloc: ^8.1.2  
+  percent_indicator: ^4.2.3
+  
 
 dev_dependencies:
   flutter_lints: ^2.0.0
