--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,12 @@
 name: easy_downloader
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
-
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -15,38 +14,36 @@ dependencies:
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-
-  internet_connection_checker: ^1.0.0+1
-  flutter_svg: ^2.0.5
+  flutter_bloc: ^8.1.2
+  flutter_downloader: ^1.10.3
   flutter_screenutil: ^5.7.0
-  flutter_bloc: ^8.1.2  
+  flutter_svg: ^2.0.5
+  gallery_saver: ^2.3.2
+  internet_connection_checker: ^1.0.0+1
+  path_provider: ^2.0.15
   percent_indicator: ^4.2.3
-  
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
-
-flutter:  
+flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/
     - assets/icons/
     - assets/images/
 
-   
   fonts:
     - family: IBMPlexSans
       fonts:
-        - asset: fonts/IBMPlexSans-Bold.ttf          
+        - asset: fonts/IBMPlexSans-Bold.ttf
         - asset: fonts/IBMPlexSans-ExtraLight.ttf
         - asset: fonts/IBMPlexSans-Light.ttf
         - asset: fonts/IBMPlexSans-Medium.ttf
         - asset: fonts/IBMPlexSans-Regular.ttf
         - asset: fonts/IBMPlexSans-SemiBold.ttf
         - asset: fonts/IBMPlexSans-Thin.ttf
-        
-  
