--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.5
   gallery_saver: ^2.3.2
+  http: ^0.13.6
   internet_connection_checker: ^1.0.0+1
   path_provider: ^2.0.15
   percent_indicator: ^4.2.3
