--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,13 @@ dependencies:
   flutter_downloader: ^1.10.3
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.5
-  gallery_saver: ^2.3.2
+  get_it: ^7.6.0
   http: ^0.13.6
   internet_connection_checker: ^1.0.0+1
   path_provider: ^2.0.15
   percent_indicator: ^4.2.3
   permission_handler: ^10.2.0
+  video_player: ^2.6.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
