--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter_screenutil: ^5.7.0
   flutter_svg: ^2.0.5
   get_it: ^7.6.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   http: ^0.13.6
   internet_connection_checker: ^1.0.0+1
   path_provider: ^2.0.15
@@ -28,9 +30,11 @@ dependencies:
   video_player: ^2.6.1
 
 dev_dependencies:
+  build_runner: ^2.4.4
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 flutter:
   uses-material-design: true
